--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write . && eslint --fix .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev",
+    "studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "better-auth": "0.2.9-beta.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "14.2.5",
@@ -21,16 +28,16 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.16.3",
-    "@types/react": "^18.3.5",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
-    "postcss": "^8.4.43",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "postcss": "^8.4.47",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   }
 }
