--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8.4.47",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
