--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "better-auth": "0.2.9-beta.1",
+    "better-auth": "0.3.3-beta.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "14.2.5",
