--- a/package.json
+++ b/package.json
@@ -17,10 +17,21 @@
     "db:generate": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "6.4.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
+    "better-auth": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,6 +45,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prisma": "^6.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
